feat: add primary color customization and shift key icons to multilingual keyboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,9 @@ flutter:
       ios:
         pluginClass: IndicaKeyboardPlugin
 
-  # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets for the keyboard icons
+  assets:
+    - assets/icons/
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/to/asset-from-package
