--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.noelpinto47.indica_keyboard">
+  
+  <!-- Permissions for IME functionality -->
+  <uses-permission android:name="android.permission.VIBRATE" />
+  
+  <application>
+    <!-- Input Method Service for native keyboard -->
+    <service
+      android:name=".IndicaInputMethodService"
+      android:label="Indica Keyboard"
+      android:permission="android.permission.BIND_INPUT_METHOD"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.view.InputMethod" />
+      </intent-filter>
+      <meta-data
+        android:name="android.view.im"
+        android:resource="@xml/input_method" />
+    </service>
+  </application>
 </manifest>
