--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: indica_keyboard
-description: "A production-ready, high-performance multilingual keyboard plugin for Flutter with native Android and iOS integration. Supports English, Hindi, and Marathi with 3-5x faster text processing, automatic conjunct formation, intelligent text input, and seamless native-Dart fallback."
+description: "High-performance multilingual keyboard for Flutter supporting English, Hindi, and Marathi with native optimization."
 version: 1.0.0
 homepage: https://github.com/noelpinto47/indica_keyboard
 repository: https://github.com/noelpinto47/indica_keyboard
