--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: indica_keyboard
 description: "High-performance multilingual keyboard for Flutter supporting English, Hindi, and Marathi with native optimization."
-version: 1.1.1
+version: 1.2.0
 homepage: https://github.com/noelpinto47/indica_keyboard
 repository: https://github.com/noelpinto47/indica_keyboard
 issue_tracker: https://github.com/noelpinto47/indica_keyboard/issues
@@ -53,22 +53,12 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  # Custom fonts for Devanagari script support (Hindi/Marathi)
+  fonts:
+    - family: NotoSansDevanagari
+      fonts:
+        - asset: assets/fonts/NotoSansDevanagari-VariableFont_wdth,wght.ttf
+          weight: 400
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/to/font-from-package
